# roko_ros

./: README.md
rdk_msgs/: CMakeLists.txt  README.md  package.xml
rdk_msgs/msg/: avoiding_data.msg  control.msg  led_state.msg  locomotion.msg  motion_command.msg  motors.msg  navigation.msg  navigation_full.msg  smart_target.msg  target.msg  trajectory_point.msg  us_data.msg  waypoint_status.msg  weather.msg
rdk_msgs/srv/: genericRequest.srv  landingRequest.srv  rokoRequest.srv  waypoint.srv
robot_software/: 1.csv  2.csv  3.csv  CMakeLists.txt  navigation.rviz  package.xml  trajectory.rviz
robot_software/launch/: control.launch  debug.launch  logger.launch  navigation.launch  robot.launch
robot_software/scripts/: control_bridge.py  log.csv  mat_analysis.py  mat_analysis_experiment.py  py_control_node.py  py_navigation_node.py  sensors_bridge.py
robot_software/src/: control_node.cpp  functions.h  navigation_node.cpp
roko_robot/: CMakeLists.txt  package.xml
roko_robot/msg/: control.msg  navigation.msg  sensors.msg
roko_robot/scripts/: Roko.py  roko_node.py
roko_software/: CMakeLists.txt  package.xml
roko_software/src/: control_node.cpp
